updated home page

--- a/school/templates/home.html
+++ b/school/templates/home.html
@@ -1,25 +1,24 @@
 {% extends "base_template.html" %}
 
-<p> I am from templates home page</p>
-
 
 {% block content %}
-<p>I am Home Page html file can be viewed by anyone</p>
- 
-<p> I am at the end line 8 from home  html page</p>
+
 
 <!-- jumbotron -->
+<div class="container">
+
 
 <div class="jumbotron">
         <div class="container">
-          <h1 class="display-3">Hello, world!</h1>
-          <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-          <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more »</a></p>
+          <h1 class="display-3">Hello, Everyone!</h1>
+          <p>This is a Attendance tracking application. Please login as student or teacher</p>
         </div>
       </div>
 
-
+    </div>
 <!-- login screen -->
+
+<div class="container">
 
 
 <body class="text-center" data-new-gr-c-s-check-loaded="14.1012.0" data-gr-ext-installed="">
@@ -36,17 +35,14 @@
         </label>
       </div>
       <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-      <p class="mt-5 mb-3 text-muted">© 2017-2018</p>
+      <p class="mt-5 mb-3 text-muted">© 2021</p>
     </form>
   
 
 </body>
 
+</div>
 
-
-
-
-<button type="submit" class="btn btn-primary">Submit</button>
 
 
 
