--- a/school/templates/student.html
+++ b/school/templates/student.html
@@ -5,19 +5,42 @@
 {% block content %}
 <p>I am student html file line 3</p>
  
-<h1>Student List</h1>
+<div class = "container">
+<h1>Student List size is =  {{students | length}}</h1>
 {% if students %}
 <ul>
-  {% for student in students %}
+  
     <li>
-     {{ student.name }}
+     <!-- display student details here -->
+     <table class="table table-striped">
+        <thead>
+          <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Class</th>
+            <th scope="col">Section</th>
+            <th scope="col">Attendance(%)</th>
+            <th scope="col">Attendance(string)</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr >
+            {% for student in students %}
+            <th scope="row">{{student.name}}</th>
+            <td>{{student.className}}</td>
+            <td>{{student.sectionName}}</td>
+            <td>{{student.attendance}}</td>
+            <td>{{student.attendance2}}</td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
     </li>
-  {% endfor %}
+  
 </ul>
 {% else %}
   <p>There are no students in the school.</p>
 {% endif %}
-
+</div>
 
 <p> I am at the end line 8 from student page</p>
 {% endblock %}
