--- a/school/templates/home.html
+++ b/school/templates/home.html
@@ -10,22 +10,21 @@
 
 <div class="jumbotron">
         <div class="container">
-          <h1 class="display-3">Hello, Everyone!</h1>
-          <p>This is a Attendance tracking application. Please login as student or teacher</p>
-        </div>
-      </div>
-
-    </div>
-<!-- login screen -->
+          <h1 class="display-3"><center><font face="Copperplate" size="20px" color="#FF7A59">Welcome Onboard!</font> </center></h1>
+          <p>This is a simple Attendance tracking application. In order to use this application, Please login as student or teacher. Any user registered in our system is classified 
+            in to any one role of either student or teacher after user registration.
+          </p>
+                 <!-- login screen -->
 
 <div class="container">
 
 
-    <a class="btn btn-primary" href="/accounts/login">Please login here</a>
+  <a class="btn btn-primary" href="/accounts/login">Please login here</a>
 
 </div>
+        </div>
+      </div>
 
-
-
+    </div>
 
 {% endblock %}
