--- a/school/templates/courses.html
+++ b/school/templates/courses.html
@@ -17,6 +17,9 @@
             <th scope="col">id</th>
             <th scope="col">Name</th>
             <th scope="col">Credit</th>
+            <th scope="col">classStartDate</th>
+            <th scope="col">classEndDate</th>
+            <th scope="col">sectionName</th>
           </tr>
         </thead>
         <tbody>
@@ -27,6 +30,9 @@
             <th scope="row">{{course.id}}</th>
             <td>{{course.name}}</td>
             <td>{{course.credit}}</td>
+            <td>{{course.classStartDate}}</td>
+            <td>{{course.classEndDate}}</td>
+            <td>{{course.sectionName}}</td>
           </tr>
     
           {% endfor %}
