--- a/school/templates/student.html
+++ b/school/templates/student.html
@@ -80,7 +80,14 @@
 </div>
 
 <!-- jquery function -->
-
-
+<!-- <script src="templates/logic.js"></script> -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script>
+$( "#add" ).click(function() {
+    alert( "add button clicked" );
+    console.log('add button clicked');
+  });
+</script>
 {% endblock %}
+
 COPY TO CLIPBOARD SELECT AL
