--- a/school/templates/attendanceAdded.html
+++ b/school/templates/attendanceAdded.html
@@ -3,6 +3,10 @@
 {% block content %}
 <div class="container d-flex justify-content-center">
   <p>Attendace added successfully </p> <br/>
+
+</div> <br/>
+  <p>you clicked course {{ course11 }}. and you are  {{ student }}. </p>
+
   <a href="/student">    Click here to view your dashboard page.</a>
 </div>
 <br/><br/><br/><br/>
