retrieving form details

--- a/school/templates/attendanceAdded.html
+++ b/school/templates/attendanceAdded.html
@@ -5,7 +5,7 @@
   <p>Attendace added successfully </p> <br/>
 
 </div> <br/>
-  <p>you clicked course {{ course11 }}. and you are  {{ student }}. </p>
+  <p>you clicked course {{ course }}. and you are  {{ student }}. </p>
 
   <a href="/student">    Click here to view your dashboard page.</a>
 </div>
