--- a/school/templates/student.html
+++ b/school/templates/student.html
@@ -68,7 +68,7 @@
                     <!-- <input type="hidden" name="course11" value="coursehardcoded" /> -->
                     <input type="hidden" name="student" value="{{attendace.student}}" />
                     <input type="hidden" name="course" value="{{attendace.course}}" />
-                    <button id="add" class="btn btn-primary my-2 my-sm-0 my-add-button" form="buttonForm" type="submit" name="add" value="Add">Add-{{attendace.course}}-{{attendace.student}}</button>
+                    <button  class="btn btn-primary my-2 my-sm-0 my-add-button"  type="submit" name="add" value="Add">Add-{{attendace.course}}-{{attendace.student}}</button>
                   </form>
                   </td>
                </tr>
