--- a/school/templates/student.html
+++ b/school/templates/student.html
@@ -69,8 +69,12 @@
                     <input type="hidden" name="student" value="{{attendace.student}}" />
                     <input type="hidden" name="course" value="{{attendace.course}}" />
                     canIModifyAttendance={{canIModifyAttendance}}
-                    {% if attendace.modified_date != today.date   %}
-                    <button  class="btn btn-primary my-2 my-sm-0 my-add-button"  type="submit" name="add" value="Add">Add - can be added-{{attendace.course}}-{{attendace.student}}</button> 
+                    {% now "Y-m-d" as todays_date %}
+                    todays_date='{{todays_date}}'
+                    atendace.modified_date='{{attendace.modified_date|date:"Y-m-d" }}'
+
+                    {% if attendace.modified_date|date:"Y-m-d"  != todays_date   %}
+                    <button  class="btn btn-primary my-2 my-sm-0 my-add-button"  type="submit" name="add" value="Add">121212Add - can be added-{{attendace.course}}-{{attendace.student}}</button> 
                      {% else %}
                      <button  class="btn btn-primary my-2 my-sm-0 my-add-button disabled"  type="submit" name="add" value="Add">Add can not be added-{{attendace.course}}-{{attendace.student}}</button> 
                      {% endif %}
