--- a/school/templates/student.html
+++ b/school/templates/student.html
@@ -74,9 +74,11 @@
                     atendace.modified_date='{{attendace.modified_date|date:"Y-m-d" }}'
 
                     {% if attendace.modified_date|date:"Y-m-d"  != todays_date   %}
-                    <button  class="btn btn-primary my-2 my-sm-0 my-add-button"  type="submit" name="add" value="Add">121212Add - can be added-{{attendace.course}}-{{attendace.student}}</button> 
+                    <button  class="btn btn-primary my-2 my-sm-0 "  type="submit" name="add" value="Add">121212Add - can be added-{{attendace.course}}-{{attendace.student}}</button> 
                      {% else %}
-                     <button  class="btn btn-primary my-2 my-sm-0 my-add-button disabled"  type="submit" name="add" value="Add">Add can not be added-{{attendace.course}}-{{attendace.student}}</button> 
+                     <button  class="btn btn-primary my-2 my-sm-0 "  type="submit" name="add" value="Add" disabled>Add can not be added-{{attendace.course}}-{{attendace.student}}
+
+                     </button> 
                      {% endif %}
                     <!-- <button  class="btn btn-primary my-2 my-sm-0 my-add-button"  type="submit" name="add" value="Add">Add-{{attendace.course}}-{{attendace.student}}</button> -->
                   </form>
