--- a/school/templates/teacher.html
+++ b/school/templates/teacher.html
@@ -1,49 +1,62 @@
+
 {% extends "base_template.html" %}
-<hr/>
-
-
 {% block content %}
-<p>I am teacher html file line 6</p>
- 
-<div class = "container">
-<h1>Teacher List size is =  {{teachers | length}}</h1>
-{% if teachers %}
-<ul>
-  
-    <li>
-     <!-- display teacher details here -->
-     <table class="table table-striped">
+
+
+<!-- grid system -->
+<div class="container">
+  <div class="row">
+    <div class="col-sm">
+     <!-- here is what teacher table goes  -->
+     <div class="container">
+      {{attendances | length}}
+      <table class="table table-striped">
         <thead>
-          <tr>
-            <th scope="col">Name</th>
-            <th scope="col">Class</th>
-            <th scope="col">Section</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr >
-            {{ user.username }}
-            
-            {% for teacher in teachers %}
-            {% if user.username == teacher.name %}
-            <th scope="row">{{teacher.name}}</th>
-            <td>{{teacher.className}}</td>
-            <td>{{teacher.sectionName}}</td>
-            <td>{{teacher.attendance}}</td>
-            <td>{{teacher.attendance2}}</td>
-          </tr>
-          {% endif %}
-          {% endfor %}
-         
-        </tbody>
+        <tr>
+          <th scope="col">Teachers</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+        {% for teacher in teachers %}
+            <td>{{teacher.name}}</td>
+        </tr>
+        {% endfor %}
+      </tbody>
       </table>
-    </li>
-  
-</ul>
-{% else %}
-  <p>There are no teachers in the school.</p>
-{% endif %}
+      </div>
+    </div>
+    <div class="col-sm">
+      
+    </div>
+    <div class="col-sm">
+      
+    </div>
+  </div>
 </div>
 
-<p> I am at the end line 50 from teacher page</p>
+
+
+
+<div class="container">
+{{attendances | length}}
+<table class="table table-striped">
+  <thead>
+  <tr>
+    <th scope="col">Course</th>
+    <th scope="col">Credit</th> 
+  </tr>
+</thead>
+<tbody>
+  <tr>
+  {% for attendance in attendances %}
+      <td>{{attendance.course}}</td>
+      <td>{{attendance.course.credit}}</td>
+  </tr>
+  {% endfor %}
+</tbody>
+</table>
+</div>
+
+
 {% endblock %}
